--- a/foundations/01-css-methods/index.html
+++ b/foundations/01-css-methods/index.html
@@ -1,14 +1,28 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctypehtml>
+  <html lang=en>
+
   <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset=UTF-8>
+    <meta content="IE=edge" http-equiv=X-UA-Compatible>
+    <meta content="width=device-width,initial-scale=1" name=viewport>
+    <link href=styles.css rel=stylesheet><!-- external method -->
     <title>Methods for Adding CSS</title>
+    <style>
+      p {
+        background-color: green;
+        color: #fff;
+        font-size: 18px
+      }
+    </style>
   </head>
+
   <body>
-    <div>Style me via the external method!</div>
+    <div>
+      <h1>Style me via the external method!</h1>
+    </div>
     <p>I would like to be styled with the internal method, please.</p>
-    <button>Inline Method</button>
+    <button style=background-color:orange;font-size:18px>Inline Method
+    </button><!-- inline method -->
   </body>
-</html>
+
+  </html>
